# schema_yaml_validation

./: Cargo.toml  readme.md
program/: Cargo.toml  build.rs
program/data/: example.yaml
program/schemas/: example.json
program/src/: main.rs
types/: Cargo.toml
types/src/: lib.rs
